[gd_scene load_steps=9 format=3 uid="uid://3l8v2hrwv2wy"]

[ext_resource type="Script" path="res://objects/leaderboard.gd" id="1_1dl71"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6dep8"]
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8k81i"]
bg_color = Color(0.203922, 0.203922, 0.203922, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="LabelSettings" id="LabelSettings_7q0jr"]
shadow_size = 15
shadow_color = Color(0.94902, 0.25098, 1, 0)

[sub_resource type="LabelSettings" id="LabelSettings_yc6pw"]
shadow_size = 15
shadow_color = Color(0.954259, 0.259294, 1, 0)

[sub_resource type="LabelSettings" id="LabelSettings_xtscc"]
shadow_size = 15
shadow_color = Color(0.952941, 0.258824, 1, 0)

[sub_resource type="LabelSettings" id="LabelSettings_qwihk"]
shadow_size = 15
shadow_color = Color(0.952941, 0.258824, 1, 0)

[sub_resource type="LabelSettings" id="LabelSettings_ioqsg"]
shadow_size = 15
shadow_color = Color(0.952941, 0.258824, 1, 0)

[node name="Leaderboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1dl71")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 23.0
offset_top = 172.0
offset_right = -907.0
offset_bottom = -332.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6dep8")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 7.0
offset_right = 214.0
offset_bottom = 144.0

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Leaderboard"
horizontal_alignment = 1
vertical_alignment = 1

[node name="referenceVbox" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="pos1" type="Label" parent="Panel/VBoxContainer/referenceVbox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_8k81i")
text = " Bubble Points Player 1: 0"
label_settings = SubResource("LabelSettings_7q0jr")

[node name="pos2" type="Label" parent="Panel/VBoxContainer/referenceVbox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_8k81i")
text = " Bubble Points Player 2: 0"
label_settings = SubResource("LabelSettings_7q0jr")

[node name="pos3" type="Label" parent="Panel/VBoxContainer/referenceVbox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_8k81i")
text = " Bubble Points Player 3: 0"
label_settings = SubResource("LabelSettings_7q0jr")

[node name="pos4" type="Label" parent="Panel/VBoxContainer/referenceVbox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_8k81i")
text = " Bubble Points Player 4: 0"
label_settings = SubResource("LabelSettings_7q0jr")

[node name="VBoxContainer2" type="Control" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Player1" type="Label" parent="Panel/VBoxContainer/VBoxContainer2"]
layout_mode = 2
offset_right = 207.0
offset_bottom = 23.0
theme_override_styles/normal = SubResource("StyleBoxFlat_8k81i")
text = " Bubble Points Player 1: 0"
label_settings = SubResource("LabelSettings_yc6pw")

[node name="Player2" type="Label" parent="Panel/VBoxContainer/VBoxContainer2"]
layout_mode = 2
offset_top = 27.0
offset_right = 207.0
offset_bottom = 50.0
theme_override_styles/normal = SubResource("StyleBoxFlat_8k81i")
text = " Bubble Points Player 2: 0"
label_settings = SubResource("LabelSettings_xtscc")

[node name="Player3" type="Label" parent="Panel/VBoxContainer/VBoxContainer2"]
layout_mode = 2
offset_top = 54.0
offset_right = 207.0
offset_bottom = 77.0
theme_override_styles/normal = SubResource("StyleBoxFlat_8k81i")
text = " Bubble Points Player 3: 0"
label_settings = SubResource("LabelSettings_qwihk")

[node name="Player4" type="Label" parent="Panel/VBoxContainer/VBoxContainer2"]
layout_mode = 2
offset_top = 81.0
offset_right = 207.0
offset_bottom = 104.0
theme_override_styles/normal = SubResource("StyleBoxFlat_8k81i")
text = " Bubble Points Player 4: 0"
label_settings = SubResource("LabelSettings_ioqsg")
